feat: implement environment-based configuration and settings
- Add .env.example with all required environment variables
- Refactor config.py to use Pydantic settings with nested configurations
- Add database, JWT, and security settings with proper typing
- Update pyproject.toml with project description
- Update .gitignore to exclude .env.local
- Add support for different environment configurations
- Implement settings caching for better performance

--- a/backend/services/chat-fastapi/pyproject.toml
+++ b/backend/services/chat-fastapi/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "chat-fastapi"
 version = "0.1.0"
-description = "Add your description here"
+description = "FastAPI-based chat application"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
